--- a/erp/frontend/index.html
+++ b/erp/frontend/index.html
@@ -22,6 +22,9 @@
   <div id="root"></div>
   <!-- Razorpay SDK for payment processing -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  <script>
+    window.global = window;
+  </script>
   <script type="module" src="/src/main.jsx"></script>
   <script>
     // Register service worker for PWA
